# design-patterns

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.cursor/rules/: documentacao-artigos.mdc
.github/workflows/: ci.yml
docs/: README.md  estrutura-de-artigos.md  roadmap.md
docs/cross-cutting/antipatterns/: README.md
docs/diagrams/: README.md
docs/foundation/01-introducao-design-patterns/: README.md  artigo.md
docs/foundation/02-revisao-poo/: README.md  artigo.md
docs/foundation/03-visao-geral-gof-e-solid/: README.md  artigo.md
docs/templates/: artigo-linkedin.md
src/csharp/: .gitignore  DesignPatterns.sln  README.md
src/python/: .gitignore  README.md  pyproject.toml  setup.py
src/python/src/designpatterns_examples/: __init__.py
src/python/src/designpatterns_examples/behavioral/: __init__.py
src/python/src/designpatterns_examples/behavioral/chain_of_responsibility/: __init__.py  __main__.py  credit_analysis.py
src/python/src/designpatterns_examples/behavioral/strategy/: __init__.py  __main__.py  payment_processing.py  pricing.py
src/python/src/designpatterns_examples/behavioral/template_method/: __init__.py  __main__.py  report.py
src/python/src/designpatterns_examples/creational/: __init__.py
src/python/src/designpatterns_examples/creational/singleton/: __init__.py  __main__.py  settings.py
src/python/src/designpatterns_examples/structural/: __init__.py
src/python/tests/: test_chain_of_responsibility.py  test_singleton.py  test_strategy.py  test_template_method.py
(+43 files in other folders)
